More content, images, improved text positioning on slider, added special background effect.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="about-ukraine-text">
             <p>
                 Я народився у 2010 році. Під час початку першої битви українців за незалежність - мені було приблизно 4
-                роки. Мої батьки та брат були там під час цього. Тому цю подію, незважаючи на такий вік, я запам'ятав
+                роки. Мої батьки та брат були там під час цього. Тому цю подію, попри такий вік, я запам'ятав
                 добре.
             </p>
         </div>
@@ -45,7 +45,7 @@
         <h2 class="about-ukraine-title">Війна для мене</h2>
         <div class="about-ukraine-text">
             <p>
-                Під час початку повномасштабного вторгення на територію України - мені було 12 років. Нажаль, я дуже
+                Під час початку повномасштабного вторгнення на територію України - мені було 12 років. На жаль, я дуже
                 добре пам'ятаю 24 лютого, цей день сьогодні нагадує мені лише про біль українців в різних куточках нашої
                 держави, але водночас він показує мені як українці змогли об'єднатися аби протидіяти підлому та пихатому
                 ворогу.
@@ -54,6 +54,25 @@
     </div>
     <div class="about-ukraine-img">
         <img src="./Img/img3.png" alt="">
+    </div>
+</section>
+
+<section class="about-ukraine-section">
+    <div class="about-ukraine-content">
+        <h2 class="about-ukraine-title">Майбутнє для мене</h2>
+        <div class="about-ukraine-text">
+            <p>
+                Я не є аналітиком або тим, хто може передбачити майбутнє, але, все ж таки, маю свою думку щодо
+                майбутнього нашої держави. Україна протягом століть зазнавала окупації, розпаду, революцій. Зараз у
+                нашої держави є шанс стати незалежною та зберегти нашу культуру, звичаї. На мою думку, майбутнє має бути
+                справедливим, закони та політика мають відповідати Конституції України. Права людей мають зберегтися та
+                не порушуватись, а держава має і надалі розвивати зв'язки з Європейським Союзом для покращення освіти,
+                законів та розвитку.
+            </p>
+        </div>
+    </div>
+    <div class="about-ukraine-img">
+        <img src="./Img/Img4.png" alt="">
     </div>
 </section>
 
