--- a/events.html
+++ b/events.html
@@ -33,34 +33,41 @@
     <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-            <div class="events-slide-content">
-                <h2 class="events-slide-title">Помаранчева Революція</h2>
-                <div class="events-slide-text">
-                    <p>
-                        Помаранчева революція 2004 року стала першим масовим протестом проти фальсифікації виборів та
-                        прагненням до демократії.
-                    </p>
+            <div class="events-slide-bg">
+                <div class="events-slide-content">
+                    <h2 class="events-slide-title">Помаранчева Революція</h2>
+                    <div class="events-slide-text">
+                        <p>
+                            Помаранчева революція 2004 року стала першим масовим протестом проти фальсифікації виборів
+                            та
+                            прагненням до демократії.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="swiper-slide">
-            <div class="events-slide-content">
-                <h2 class="events-slide-title">Революція Гідності</h2>
-                <div class="events-slide-text">
-                    <p>
-                        Революція Гідності 2013-2014 років розпочалася через відмову януковича підписати Угоду про
-                        асоціацію з ЄС, жорстоке побиття мітингувальників та закінчилася його втечею.
-                    </p>
+            <div class="events-slide-bg">
+                <div class="events-slide-content">
+                    <h2 class="events-slide-title">Революція Гідності</h2>
+                    <div class="events-slide-text">
+                        <p>
+                            Революція Гідності 2013-2014 років розпочалася через відмову януковича підписати Угоду про
+                            асоціацію з ЄС, жорстоке побиття мітингувальників та закінчилася його втечею.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="swiper-slide">
-            <div class="events-slide-content">
-                <h2 class="events-slide-title">Війна</h2>
-                <div class="events-slide-text">
-                    <p>
-                        Сьогодні війна в Україні триває. Українці понад 2 роки сміливо виборюють свою незалежність.
-                    </p>
+            <div class="events-slide-bg">
+                <div class="events-slide-content">
+                    <h2 class="events-slide-title">Війна</h2>
+                    <div class="events-slide-text">
+                        <p>
+                            Сьогодні війна в Україні триває. Українці понад 2 роки сміливо виборюють свою незалежність.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,7 +92,7 @@
                 <h3 class="tab-title">Причини</h3>
                 <div class="tab-content">
                     <p>
-                        Фальсифікація результатів президентських виборів на користь віктора януковича.
+                        Фальсифікація результатів президентських виборів на користь Віктора Януковича.
                     </p>
                 </div>
             </div>
@@ -104,7 +111,7 @@
                 <h3 class="tab-title">Причини</h3>
                 <div class="tab-content">
                     <p>
-                        Відмова януковича підписати Угоду про асоціацію з ЄС.
+                        Відмова Януковича підписати Угоду про асоціацію з ЄС.
                     </p>
                 </div>
             </div>
@@ -112,7 +119,7 @@
                 <h3 class="tab-title">Результати</h3>
                 <div class="tab-content">
                     <p>
-                        Інтеграція з ЄС, втеча януковича з України.
+                        Інтеграція з ЄС, втеча Януковича з України.
                     </p>
                 </div>
             </div>
