1. Changed text on the front page 2. Removing tabs and moving their content to the slider

--- a/events.html
+++ b/events.html
@@ -43,6 +43,24 @@
                             прагненням до демократії.
                         </p>
                     </div>
+                    <div class="event-tab visible">
+                        <div class="tab-card">
+                            <h3 class="tab-title">Причини</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Фальсифікація результатів президентських виборів на користь Віктора Януковича.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="tab-card">
+                            <h3 class="tab-title">Результати</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Повторне голосування, в якому переміг Віктор Ющенко.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,6 +74,24 @@
                             асоціацію з ЄС, жорстоке побиття мітингувальників та закінчилася його втечею.
                         </p>
                     </div>
+                    <div class="event-tab">
+                        <div class="tab-card">
+                            <h3 class="tab-title">Причини</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Відмова Януковича підписати Угоду про асоціацію з ЄС.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="tab-card">
+                            <h3 class="tab-title">Результати</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Інтеграція з ЄС, втеча Януковича з України.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -68,6 +104,24 @@
                             Сьогодні війна в Україні триває. Українці понад 2 роки сміливо виборюють свою незалежність.
                         </p>
                     </div>
+                    <div class="event-tab">
+                        <div class="tab-card">
+                            <h3 class="tab-title">Причини</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Прагнення росії захопити Україну та російська агресія проти нашої держави.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="tab-card">
+                            <h3 class="tab-title">Результати</h3>
+                            <div class="tab-content">
+                                <p>
+                                    Боротьба українців за незалежність та повернення окупованих територій.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,75 +133,7 @@
     <div class="swiper-button-next"></div>
 </div>
 
-<div class="events-tabs">
-    <ul class="tab-buttons-list">
-        <li class="stylized-button">Помаранчева Революція <i>(2004)</i></li>
-        <li class="stylized-button">Революція Гідності <i>(2013-2014)</i></li>
-        <li class="stylized-button">Війна <i>(2022-дотепер)</i></li>
-    </ul>
-    <div class="tabs-container">
-
-        <div class="event-tab visible">
-            <div class="tab-card">
-                <h3 class="tab-title">Причини</h3>
-                <div class="tab-content">
-                    <p>
-                        Фальсифікація результатів президентських виборів на користь Віктора Януковича.
-                    </p>
-                </div>
-            </div>
-            <div class="tab-card">
-                <h3 class="tab-title">Результати</h3>
-                <div class="tab-content">
-                    <p>
-                        Повторне голосування, в якому переміг Віктор Ющенко.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="event-tab">
-            <div class="tab-card">
-                <h3 class="tab-title">Причини</h3>
-                <div class="tab-content">
-                    <p>
-                        Відмова Януковича підписати Угоду про асоціацію з ЄС.
-                    </p>
-                </div>
-            </div>
-            <div class="tab-card">
-                <h3 class="tab-title">Результати</h3>
-                <div class="tab-content">
-                    <p>
-                        Інтеграція з ЄС, втеча Януковича з України.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="event-tab">
-            <div class="tab-card">
-                <h3 class="tab-title">Причини</h3>
-                <div class="tab-content">
-                    <p>
-                        Прагнення росії захопити Україну та російська агресія проти нашої держави.
-                    </p>
-                </div>
-            </div>
-            <div class="tab-card">
-                <h3 class="tab-title">Результати</h3>
-                <div class="tab-content">
-                    <p>
-                        Боротьба українців за незалежність та повернення окупованих територій.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<footer class="footer">
+<footer class="footer" style="margin-top: 0;">
     <div class="footer-container">
         <div class="footer-card">
             <h2 class="footer-card-title">Навігація</h2>
