--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3 class="greetings-slogan">No pasarán - Ворог Не Пройде</h3>
             <div class="greetings-text">
                 <p>
-                    Від сивих часів князя Ярослава Мудрого, що збудував величну Київську Русь, до сьогодення, Україна
+                    Від сивих часів князів Великої Київської Русі, до сьогодення, Україна
                     веде невпинну боротьбу за свою незалежність. Гідність, свобода, воля - ось ті цінності, які протягом
                     століть плекали українці, виборюючи їх у жорстоких битвах з ворожими загарбниками.
                 </p>
