Grammar mistakes solved

--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
                     <h2 class="events-slide-title">Революція Гідності</h2>
                     <div class="events-slide-text">
                         <p>
-                            Революція Гідності 2013-2014 років розпочалася через відмову януковича підписати Угоду про
+                            Революція Гідності 2013-2014 років розпочалася через відмову Януковича підписати Угоду про
                             асоціацію з ЄС, жорстоке побиття мітингувальників та закінчилася його втечею.
                         </p>
                     </div>
