Grammar mistakes solved

--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@
             <p>
                 Я народився у 2010 році. Під час початку першої битви українців за незалежність - мені було приблизно 4
                 роки. Мої батьки та брат були там під час цього. Тому цю подію, попри такий вік, я запам'ятав
-                добре.
+                добре. Я ставлюся до Революції Гідності, як до важливої, але у той самий час і дуже трагічної частини розвитку нашої
+                держави, яка допомогла нам рухатися далі та покращити якість життя.
             </p>
         </div>
     </div>
