--- a/index.html
+++ b/index.html
@@ -59,15 +59,13 @@
 </section>
 
 <div class="history-section">
-    <h1 class="history-title">Моя позиція</h1>
     <div class="history-cards-container">
         <div class="history-card">
             <h2 class="history-card-title">Революція Гідності</h2>
             <div class="history-card-content">
                 <p>
-                    Я народився у 2010 році. Під час початку першої битви українців за незалежність - мені було
-                    приблизно 4 роки. Мої батьки та брат були там під час цього. Тому цю подію, незважаючи на такий вік,
-                    я запам'ятав добре.
+                    Я ставлюся до Революції Гідності, як до важливої, але у той самий час і дуже трагічної частини розвитку нашої
+                    держави, яка допомогла нам рухатися далі та покращити якість життя.
                 </p>
             </div>
         </div>
@@ -75,8 +73,7 @@
             <h2 class="history-card-title">Війна</h2>
             <div class="history-card-content">
                 <p>
-                    Під час початку повномасштабного вторгення на територію України - мені було 12 років. Нажаль, я дуже
-                    добре пам'ятаю 24 лютого, цей день сьогодні нагадує мені лише про біль українців в різних куточках нашої
+                    День початку війни сьогодні нагадує мені лише про біль українців в різних куточках нашої
                     держави, але водночас він показує мені як українці змогли об'єднатися аби протидіяти підлому та пихатому
                     ворогу.
                 </p>
