--- a/events.html
+++ b/events.html
@@ -133,6 +133,47 @@
     <div class="swiper-button-next"></div>
 </div>
 
+<section class="about-ukraine-section">
+    <div class="about-ukraine-content">
+        <h2 class="about-ukraine-title">Про Україну</h2>
+        <div class="about-ukraine-text">
+            <p>
+                Вже минуло понад 33 роки незалежності України, але ця держава насправді існує століттями. Лише згадайте
+                відважних козаків та мудрих трипільців, Київську Русь та Галицько-Волинську державу. Українці завжди
+                виборювали свою незалежність і продовжують це робити. Всі ми маємо пишатися, що є представниками такої
+                давньої та гарної держави.
+            </p>
+        </div>
+    </div>
+    <div class="about-ukraine-img">
+        <img src="./Img/UkraineLogo.png" alt="">
+    </div>
+</section>
+
+<div class="history-section">
+    <div class="history-cards-container">
+        <div class="history-card">
+            <h2 class="history-card-title">Революція Гідності</h2>
+            <div class="history-card-content">
+                <p>
+                    Я ставлюся до Революції Гідності, як до важливої, але у той самий час і дуже трагічної частини розвитку нашої
+                    держави, яка допомогла нам рухатися далі та покращити якість життя.
+                </p>
+            </div>
+        </div>
+        <div class="history-card">
+            <h2 class="history-card-title">Війна</h2>
+            <div class="history-card-content">
+                <p>
+                    День початку війни сьогодні нагадує мені лише про біль українців в різних куточках нашої
+                    держави, але водночас він показує мені як українці змогли об'єднатися аби протидіяти підлому та пихатому
+                    ворогу.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <footer class="footer" style="margin-top: 0;">
     <div class="footer-container">
         <div class="footer-card">
