--- a/index.html
+++ b/index.html
@@ -36,82 +36,13 @@
                     століть плекали українці, виборюючи їх у жорстоких битвах з ворожими загарбниками.
                 </p>
             </div>
-        </div>
-    </div>
-</section>
-
-<section class="about-ukraine-section">
-    <div class="about-ukraine-content">
-        <h2 class="about-ukraine-title">Про Україну</h2>
-        <div class="about-ukraine-text">
-            <p>
-                Вже минуло понад 33 роки незалежності України, але ця держава насправді існує століттями. Лише згадайте
-                відважних козаків та мудрих трипільців, Київську Русь та Галицько-Волинську державу. Українці завжди
-                виборювали свою незалежність і продовжують це робити. Всі ми маємо пишатися, що є представниками такої
-                давньої та гарної держави.
-            </p>
-        </div>
-        <a href="events.html" class="stylized-button">Події держави</a>
-    </div>
-    <div class="about-ukraine-img">
-        <img src="./Img/UkraineLogo.png" alt="">
-    </div>
-</section>
-
-<div class="history-section">
-    <div class="history-cards-container">
-        <div class="history-card">
-            <h2 class="history-card-title">Революція Гідності</h2>
-            <div class="history-card-content">
-                <p>
-                    Я ставлюся до Революції Гідності, як до важливої, але у той самий час і дуже трагічної частини розвитку нашої
-                    держави, яка допомогла нам рухатися далі та покращити якість життя.
-                </p>
-            </div>
-        </div>
-        <div class="history-card">
-            <h2 class="history-card-title">Війна</h2>
-            <div class="history-card-content">
-                <p>
-                    День початку війни сьогодні нагадує мені лише про біль українців в різних куточках нашої
-                    держави, але водночас він показує мені як українці змогли об'єднатися аби протидіяти підлому та пихатому
-                    ворогу.
-                </p>
+            <div class="buttons">
+                <a href="events.html" class="stylized-button">Події</a>
+                <a href="about.html" class="stylized-button">Про мене</a>
             </div>
         </div>
     </div>
-    <a href="about.html" class="stylized-button">Про мене</a>
-</div>
-
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-card">
-            <h2 class="footer-card-title">Навігація</h2>
-            <ul class="footer-menu-list">
-                <li>
-                    <a href="index.html" class="footer-link">Головна</a>
-                </li>
-                <li>
-                    <a href="events.html" class="footer-link">Події</a>
-                </li>
-                <li>
-                    <a href="about.html" class="footer-link">Про мене</a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer-card">
-            <h2 class="footer-card-title">Контакти</h2>
-            <a href="mailto:tiospal@ukr.net" class="footer-link">tiospal@ukr.net</a>
-        </div>
-        <div class="footer-card">
-            <h2 class="footer-card-title">Про сайт</h2>
-            <ul class="footer-menu-list">
-                <li>Дата: 2024</li>
-                <li>Країна: Україна</li>
-            </ul>
-        </div>
-    </div>
-</footer>
+</section>
 
 <script src="./js/script.js"></script>
 
